# automated_data_acquisitor

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  test_acq_single.py  test_sync_acq.py
.github/workflows/: ci.yml
docs/source/: automated_data_acquisitor.card_classes.rst  automated_data_acquisitor.data_classes.rst  automated_data_acquisitor.helper_functions.rst  automated_data_acquisitor.rst  conf.py  getting_started.rst  index.rst  modules.rst
src/automated_data_acquisitor/: __init__.py  automated_data_acquisitor.py
src/automated_data_acquisitor/card_classes/: card_thread.py
src/automated_data_acquisitor/data_classes/: acquisition_parameters.py  file_format.py
src/automated_data_acquisitor/helper_functions/: __init__.py  helper_functions.py
